--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2024</h2>
 <ol>
+<li><p><b>Denoising Diffusion Probabilistic Models Are Optimally Adaptive to Unknown Low Dimensionality</b> <br />
+Z. Huang, Y. Wei, <u>Y. Chen</u>, 2024. <a href="publications/DDPM-low-dim.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Stochastic Runge-Kutta Methods: Provable Acceleration of Diffusion Models</b> <br />
 Y. Wu, <u>Y. Chen</u>, Y. Wei, 2024. <a href="publications/Stochastic_Runge_Kutta.pdf">[paper]</a>
 </p>
@@ -337,7 +341,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-14 13:45:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-24 15:11:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
