--- a/index.html
+++ b/index.html
@@ -104,9 +104,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p><b>Diffusion models</b>
-</p>
+<li><p><b>Diffusion models</b></p>
+</li>
+</ul>
+
 <ul>
+<li>
+<ul>
+<li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> 2024.
+</p>
+</li>
 <li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/DiffusionODE.pdf">&ldquo;A sharp convergence theory for
 the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
@@ -223,7 +230,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-14 13:45:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-24 15:11:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
