--- a/Group.html
+++ b/Group.html
@@ -39,7 +39,7 @@
 </li>
 <li><p><a href="https://statistics.wharton.upenn.edu/profile/zhihanh/">Zhihan Huang</a> (Stats PhD student at Wharton, co-advised with Yuting Wei)</p>
 </li>
-<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
+<li><p><a href="https://scholar.google.com/citations?user=oCcK0LoAAAAJ&amp;hl=en">Jack Ji</a> (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
 <li><p><a href="https://faketomatoes.github.io/">Jiadong Liang</a> (Postdoc)</p>
 </li>
@@ -62,7 +62,7 @@
 </li>
 <li><p>Yanxi Chen (First Job: Alibaba DAMO Academy) </p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Faculty, Department of Electrical and Systems Engineering and Department of Statistics and Data Science, Washington University in St. Louis)
+<li><p><a href="https://sds.wustl.edu/people/hong-hu">Hong Hu</a> (Faculty, Department of Electrical and Systems Engineering and Department of Statistics and Data Science, Washington University in St. Louis)
 </p>
 </li>
 <li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, Department of Statistics, Chinese University of Hong Kong)
@@ -86,7 +86,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-24 15:11:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-12 08:36:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
