--- a/Publications_year.html
+++ b/Publications_year.html
@@ -128,7 +128,8 @@ D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u
 <li><p><b>How MagNet: Machine Learning Framework for Modeling Power Magnetic Material Characteristics</b> <br />
 H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
 <i>IEEE Transactions on Power Electronics</i>, vol. 38, no. 12, pp. 15829-15853, Dec. 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>IEEE Transactions on Power Electronics (TPEL) Prize Paper Award (first place)</b></p>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b style="color: FireBrick">IEEE Transactions on Power Electronics (TPEL) Prize Paper Award (first place)</b>
+</p>
 </li>
 </ol>
 <h2>2022</h2>
@@ -202,7 +203,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </p>
 </li>
 <li><p><b>Fast Global Convergence of Natural Policy Gradient Methods with Entropy Regularization</b> <br />  S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi, <i>Operations Research</i>, vol. 70, no. 4, pp. 2563–2578, 2022. <a href="publications/NPG_reg.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2021.2151">[OR version]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>INFORMS George Nicholson award finalist</b>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b style="color: FireBrick">INFORMS George Nicholson award finalist</b>
 </p>
 </li>
 <li><p><b>Sample Complexity of Asynchronous Q-Learning: Sharper Analysis and Variance Reduction</b> <br />  G. Li, Y. Wei, Y. Chi, Y. Gu, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 68, no. 1, pp. 448-473, Jan. 2022. <a href="publications/AsynQlearning.pdf">[paper]</a><a href="slides/Async_Qlearning_slides.pdf">[slides]</a>
@@ -257,7 +258,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <h2>2017</h2>
 <ol>
 <li><p><b>Implicit Regularization in Nonconvex Statistical Estimation:<br /> Gradient Descent Converges Linearly for Phase Retrieval, Matrix Completion, and Blind Deconvolution</b>  <br />  C. Ma, K. Wang, Y. Chi, <u>Y. Chen</u>, <i>Foundations of Computational Mathematics</i>, vol. 20, no. 3, pp. 451-632, June 2020.  <a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf">[FoCM version]</a><a href="publications/ImplicitReg_main.pdf">[main text]</a><a href="publications/ImplicitReg_supp.pdf">[supplement]</a><a href="publications/ImplicitReg.pdf">[Arxiv]</a><a href="slides/implicit_reg_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>SIAM Activity Group on Imaging Science Best Paper Prize</b>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b style="color: FireBrick">SIAM Activity Group on Imaging Science Best Paper Prize</b>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/ImplicitReg_ICML.pdf">ICML 2018</a> 
 </p>
 </li>
@@ -282,8 +283,8 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 <h2>2015 </h2>
 <ol>
 <li><p><b>Solving Random Quadratic Systems of Equations Is Nearly as Easy as Solving Linear Systems</b>  <br />  <u>Y. Chen</u> and E. J. Candes, <i>Communications on Pure and Applied Mathematics</i>, vol. 70, issue 5, pp. 822 - 883, May 2017.  <a href="publications/TruncatedWF_CPAM.pdf">[paper]</a><a href="publications/TWF_NIPS.pdf">[NIPS version]</a><a href="publications/supplement_TWF.pdf">[supplement]</a><a href="TWF/">[webpage and code]</a><a href="slides//TWF_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>ICCM Best Paper Award (Gold Medal)</b>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>Finalist, Best Paper Prize for Young Researchers in Continuous Optimization</b>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b style="color: FireBrick">ICCM Best Paper Award (Gold Medal)</b>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b style="color: FireBrick">Finalist, Best Paper Prize for Young Researchers in Continuous Optimization</b>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in <a href="publications/TWF_NIPS.pdf">NIPS 2015</a> <b>(oral)</b>
 </p>
 </li>
@@ -341,7 +342,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-24 15:11:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-12 08:36:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
