--- a/Teaching.html
+++ b/Teaching.html
@@ -83,7 +83,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-24 15:11:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-12 08:36:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
