--- a/Group.html
+++ b/Group.html
@@ -47,6 +47,8 @@
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
+<li><p><a href="https://wuyc0114.github.io/">Yuchen Wu</a> (Department postdoc at Wharton Stats)</p>
+</li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
@@ -86,7 +88,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-12 08:36:50 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-13 10:38:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
