--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2024</h2>
 <ol>
+<li><p><b>Anytime Acceleration of Gradient Descent</b> <br />
+Z. Zhang,  J. D. Lee, S. S. Du, <u>Y. Chen</u>, 2024. <a href="publications/Anytime_AGD.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Denoising Diffusion Probabilistic Models Are Optimally Adaptive to Unknown Low Dimensionality</b> <br />
 Z. Huang, Y. Wei, <u>Y. Chen</u>, 2024. <a href="publications/DDPM-low-dim.pdf">[paper]</a>
 </p>
@@ -66,7 +70,7 @@ G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024. <a href="publications/DiffusionODE.
 </p>
 </li>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
-G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to ICML 2024
 </p>
 </li>
@@ -342,7 +346,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-13 10:39:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-26 13:41:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
