--- a/index.html
+++ b/index.html
@@ -104,12 +104,8 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
-<li><p><b>Diffusion models</b></p>
-</li>
-</ul>
-
-<ul>
-<li>
+<li><p><b>Diffusion models</b>
+</p>
 <ul>
 <li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> 2024.
 </p>
@@ -118,7 +114,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
 
 </p>
 </li>
@@ -127,7 +123,17 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Statistical learning theory</b>
+<li><p><b>Optimization</b>
+</p>
+<ul>
+<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> 2024. </p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p><b>Statistical learning</b>
 </p>
 <ul>
 <li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
@@ -168,7 +174,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Nonconvex statistical learning and estimation</b>
+<li><p><b>Nonconvex statistical estimation</b>
 </p>
 <ul>
 <li><p><u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <a href="publications/RPCA_noise.pdf">&ldquo;Bridging convex and nonconvex optimization in robust PCA: Noise, outliers, and missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[ArXiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
@@ -230,7 +236,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-13 10:39:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-26 13:41:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
