--- a/Publications_year.html
+++ b/Publications_year.html
@@ -75,7 +75,7 @@ G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal cont
 </p>
 </li>
 <li><p><b>Horizon-Free Regret for Linear Markov Decision Processes</b> <br />
-Zihan Zhang, Jason D. Lee, <u>Y. Chen</u>, Simon S. Du, <i>International Conference on Learning Representations (ICLR)</i>, 2024. <a href="https://arxiv.org/abs/2403.10738">[paper]</a></p>
+Z. Zhang, J. D. Lee, <u>Y. Chen</u>, S. S. Du, <i>International Conference on Learning Representations (ICLR)</i>, 2024. <a href="https://arxiv.org/abs/2403.10738">[paper]</a></p>
 </li>
 </ol>
 <h2>2023</h2>
@@ -346,7 +346,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-26 13:41:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-26 13:45:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
