--- a/Group.html
+++ b/Group.html
@@ -51,7 +51,7 @@
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=un0eGzEAAAAJ&amp;hl=en">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
+<li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
 </li>
 </ul>
 <h2>Alumni </h2>
@@ -88,7 +88,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-26 22:38:54 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-11-29 16:55:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
