--- a/Publications_year.html
+++ b/Publications_year.html
@@ -189,7 +189,7 @@ G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  <i>Information and Inference: A Journal 
 G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a><a href="publications/LinearQ_Revisit_NeurIPS.pdf">[NeurIPS version]</a><a href="slides/Linear_realizability_slides.pdf">[slides]</a>  
 </p>
 </li>
-<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>,  2021. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
+<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, 2024+. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
 </p>
 </li>
 </ol>
@@ -345,7 +345,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-11-30 14:14:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-12-03 18:55:26 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
