--- a/Teaching.html
+++ b/Teaching.html
@@ -35,6 +35,10 @@
 <h1>Teaching</h1>
 <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp University of Pennsylvania</h2>
 <ul>
+<li><p>Spring 2025: Convex Optimization For Statistics And Data Science (STAT4810, STAT5810, OIDD4810, OIDD5810)</p>
+</li>
+<li><p>Spring 2025: Introduction to Python for Data Science (STAT4770, OIDD4770)</p>
+</li>
 <li><p>Fall 2023: <a href="https://yuxinchen2020.github.io/large_scale_optimization/index.html">Large-Scale Optimization for Data Science (STAT9910-303)</a></p>
 </li>
 <li><p>Fall 2023: Convex Optimization For Statistics And Data Science (STAT4810, STAT5810, OIDD4810, OIDD5810)</p>
@@ -83,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-12-03 18:55:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-12 16:04:34 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
