--- a/Publications_year.html
+++ b/Publications_year.html
@@ -195,7 +195,7 @@ G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi,  <i>Information and Inference: A Journal 
 G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2021. <a href="publications/LinearQ_Revisit.pdf">[paper]</a><a href="publications/LinearQ_Revisit_NeurIPS.pdf">[NeurIPS version]</a><a href="slides/Linear_realizability_slides.pdf">[slides]</a>  
 </p>
 </li>
-<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>, accepted to <i>IEEE Transactions on Information Theory</i>, vol. 71, no. 2, pp. 1200-1247, 2025. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
+<li><p><b>Minimax Estimation of Linear Functions of Eigenvectors in the Face of Small Eigen-Gaps</b> <br />  G. Li, C. Cai,  H. V. Poor, <u>Y. Chen</u>, <i>IEEE Transactions on Information Theory</i>, vol. 71, no. 2, pp. 1200-1247, 2025. <a href="publications/Eigenanalysis_linear_forms.pdf">[paper]</a>
 </p>
 </li>
 </ol>
@@ -351,7 +351,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-25 09:56:36 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-25 10:18:12 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
