--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 <h2>2025</h2>
 <ol>
 <li><p><b>Low-Dimensional Adaptation of Diffusion Models: Convergence in Total Variation</b> <br />
-J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-dim.pdf">[paper]</a></p>
+J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-dim.pdf">[paper]</a><a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a></p>
 </li>
 </ol>
 <h2>2024</h2>
@@ -351,7 +351,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-25 10:18:12 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-27 11:08:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
