--- a/index.html
+++ b/index.html
@@ -108,9 +108,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </p>
 <ul>
 <li><p>J. Liang, Z. Huang, <u>Y. Chen</u>, <a href="publications/diffusion-low-dim.pdf">&ldquo;Low-dimensional adaptation of diffusion models: Convergence 
-in total variation,&rdquo;</a> 2025.
-</p>
+in total variation,&rdquo;</a> 2025.  <a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a></p>
 </li>
+</ul>
+
+</li>
+</ul>
+
+<ul>
+<li>
+<ul>
 <li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> 2024.
 </p>
 </li>
@@ -240,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-25 10:18:11 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-27 11:08:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
