--- a/Publications_year.html
+++ b/Publications_year.html
@@ -95,9 +95,10 @@ Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Opti
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
-<li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
-G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICLR 2024
+<li><p><b>Towards Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
+G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. 
+<i>International Conference on Learning Representations (ICLR)</i>, 2024. <a href="publications/DiffusionSGM.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+
 </p>
 </li>
 <li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
@@ -152,7 +153,7 @@ G. Li, Y. Chi, Y. Wei, <u>Y. Chen</u>,  <i>Neural Information Processing Systems
 </p>
 </li>
 <li><p><b>Model-Based Reinforcement Learning Is Minimax-Optimal for Offline Zero-Sum Markov Games</b> <br />
-Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, accepted to <i>Operations Research</i>, 2024+. <a href="publications/model_based_offline_game.pdf">[paper]</a>
+Y. Yan, G. Li, <u>Y. Chen</u>, J. Fan, <i>Operations Research</i>, vol. 72, no. 6, pp. 2430–2445, November–December 2024. <a href="publications/model_based_offline_game.pdf">[paper]</a><a href="https://pubsonline.informs.org/doi/epdf/10.1287/opre.2022.0342">[OR version]</a>
 </p>
 </li>
 <li><p><b>The Efficacy of Pessimism in Asynchronous Q-Learning</b> <br />
@@ -351,7 +352,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-27 11:08:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-27 18:56:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
