--- a/Publications_year.html
+++ b/Publications_year.html
@@ -102,7 +102,7 @@ G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023.
 </p>
 </li>
 <li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
-Y. Zhou, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 53, no. 1, pp. 91-116, 2025.  <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
+Y. Zhou, <u>Y. Chen</u>,  <i>Annals of Statistics</i>, vol. 53, no. 1, pp. 91-116, 2025.  <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-53/issue-1/Deflated-HeteroPCA--Overcoming-the-curse-of-ill-conditioning-in/10.1214/24-AOS2456.full">[AoS version]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
@@ -352,7 +352,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-14 09:37:37 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-19 18:47:00 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
