--- a/Group.html
+++ b/Group.html
@@ -43,9 +43,8 @@
 </li>
 <li><p><a href="https://faketomatoes.github.io/">Jiadong Liang</a> (Postdoc)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)</p>
-</li>
-<li><p><a href="https://jianhaoma.github.io/">Jianhao Ma</a> (Postdoc, incoming faculty, Tsinghua University)</p>
+<li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)
+</p>
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -108,7 +107,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-27 14:47:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-02-27 14:53:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
