--- a/Publications_year.html
+++ b/Publications_year.html
@@ -115,7 +115,7 @@ G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-e
 </p>
 </li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
-G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a>
+G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  accepted to <i>SIAM Journal on Optimization</i>, 2025 <a href="publications/OT_game.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Federated Natural Policy Gradient Methods for Multi-task Reinforcement Learning</b> <br />
@@ -352,7 +352,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-27 14:55:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
