--- a/Teaching.html
+++ b/Teaching.html
@@ -87,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-02-27 14:55:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
