--- a/Software.html
+++ b/Software.html
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 10:43:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
