--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (accepted in part to COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 
 
 </p>
@@ -244,7 +244,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 10:43:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
