--- a/Education.html
+++ b/Education.html
@@ -103,7 +103,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 10:43:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
