--- a/Publications_year.html
+++ b/Publications_year.html
@@ -86,7 +86,7 @@ G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal cont
 <h2>2023</h2>
 <ol>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
-Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, accepted to <i>Journal of the ACM</i>, 2025+. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
@@ -352,7 +352,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-09 09:12:10 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 10:43:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
