--- a/Group.html
+++ b/Group.html
@@ -39,16 +39,13 @@
 </li>
 <li><p><a href="https://statistics.wharton.upenn.edu/profile/zhihanh/">Zhihan Huang</a> (Stats PhD student at Wharton, co-advised with Yuting Wei)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=oCcK0LoAAAAJ&amp;hl=en">Jack Ji</a> (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
-</li>
 <li><p><a href="https://faketomatoes.github.io/">Jiadong Liang</a> (Postdoc)</p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)
 </p>
 </li>
-<li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
-</li>
-<li><p><a href="https://wuyc0114.github.io/">Yuchen Wu</a> (Department postdoc at Wharton Stats)</p>
+<li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)
+</p>
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -72,8 +69,9 @@ University of Michigan-Ann Arbor)
 <li><p><a href="https://sds.wustl.edu/people/hong-hu">Hong Hu</a> (Faculty, 
 
 Washington University in St. Louis)
-
-
+</p>
+</li>
+<li><p><a href="https://scholar.google.com/citations?user=oCcK0LoAAAAJ&amp;hl=en">Jack Ji</a> (First Job: Google DeepMind) 
 </p>
 </li>
 <li><p><a href="https://ligen12.github.io/">Gen Li</a> (Faculty, 
@@ -109,7 +107,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-23 20:34:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-04-23 20:36:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
