--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,13 +54,15 @@
 <h2>2025</h2>
 <ol>
 <li><p><b>Low-Dimensional Adaptation of Diffusion Models: Convergence in Total Variation</b> <br />
-J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-dim.pdf">[paper]</a><a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a></p>
+J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-dim.pdf">[paper]</a><a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2025</p>
 </li>
 </ol>
 <h2>2024</h2>
 <ol>
 <li><p><b>Anytime Acceleration of Gradient Descent</b> <br />
 Z. Zhang,  J. D. Lee, S. S. Du, <u>Y. Chen</u>, 2024. <a href="publications/Anytime_AGD.pdf">[paper]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2025
 </p>
 </li>
 <li><p><b>Denoising Diffusion Probabilistic Models Are Optimally Adaptive to Unknown Low Dimensionality</b> <br />
@@ -352,7 +354,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-23 20:36:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-03 09:39:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
