--- a/index.html
+++ b/index.html
@@ -108,16 +108,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </p>
 <ul>
 <li><p>J. Liang, Z. Huang, <u>Y. Chen</u>, <a href="publications/diffusion-low-dim.pdf">&ldquo;Low-dimensional adaptation of diffusion models: Convergence 
-in total variation,&rdquo;</a> 2025.  <a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a></p>
+in total variation,&rdquo;</a> 2025 (accepted in part to COLT 2025).  <a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a>
+</p>
 </li>
-</ul>
-
-</li>
-</ul>
-
-<ul>
-<li>
-<ul>
 <li><p>Z. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/DDPM-low-dim.pdf">&ldquo;Denoising diffusion probabilistic models are optimally adaptive to unknown low dimensionality,&rdquo;</a> 2024.
 </p>
 </li>
@@ -147,7 +140,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Optimization</b>
 </p>
 <ul>
-<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> 2024. </p>
+<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> 2024 (accepted in part to COLT 2025). </p>
 </li>
 </ul>
 
@@ -244,7 +237,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-04-23 20:36:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-03 09:39:20 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
