--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ in total variation,&rdquo;</a> 2025 (accepted in part to COLT 2025).  <a href="s
 the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
+<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> ICML 2024 (*=equal contributions). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
 
 </p>
 </li>
@@ -130,7 +130,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Statistical learning</b>
 </p>
 <ul>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part to COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -150,7 +150,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Reinforcement learning</b>
 </p>
 <ul>
-<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (accepted in part to COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> accepted to <i>Journal of the ACM</i>, 2025+ (appeared in part to COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 
 
 </p>
@@ -237,7 +237,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-03 09:42:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-03 10:22:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
