--- a/Publications_year.html
+++ b/Publications_year.html
@@ -78,8 +78,8 @@ G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024. <a href="publications/DiffusionODE.
 </p>
 </li>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
-G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to ICML 2024
+G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, International Conference on Machine Learning (ICML), 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a><a href="https://github.com/TimofeyEfimov/AcceleratedDiffusionSamplers">[code]</a>
+
 
 
 </p>
@@ -354,7 +354,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-03 10:22:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-03 10:23:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
