--- a/Group.html
+++ b/Group.html
@@ -41,11 +41,14 @@
 </li>
 <li><p><a href="https://faketomatoes.github.io/">Jiadong Liang</a> (Postdoc)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)
-</p>
+<li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Chris Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)</p>
+</li>
+<li><p><a href="https://jianhaoma.github.io/">Jianhao Ma</a> (Postdoc, incoming faculty, Tsinghua University)</p>
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)
 </p>
+</li>
+<li><p><a href="https://yuepengyang.github.io/">Yuepeng Yang</a> (Postdoc, co-advised with Yuejie Chi)</p>
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -107,7 +110,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-06 19:08:12 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-27 16:04:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
