--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -272,7 +272,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-06 19:08:12 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-27 16:04:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
