--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <h2>Selected recent papers</h2>
 <ul>
+<li><p><b>In-context learning</b>
+</p>
+<ul>
+<li><p>G. Li, Y. Jiao, Y. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/TransformerICL.pdf">&ldquo;Transformers meet in-context learning: A universal approximation theory,&rdquo;</a> 2025. </p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><b>Diffusion models</b>
 </p>
 <ul>
@@ -127,19 +137,12 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Statistical learning</b>
+<li><p><b>Statistical learning and optimization</b>
 </p>
 <ul>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
-<li><p><b>Optimization</b>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a>
 </p>
-<ul>
+</li>
 <li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> 2024 (accepted in part to COLT 2025). </p>
 </li>
 </ul>
@@ -237,7 +240,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-27 16:04:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-06 00:00:48 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
