--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2025</h2>
 <ol>
+<li><p><b>Transformers Meet In-Context Learning: A Universal Approximation Theory</b> <br />
+G. Li, Y. Jiao, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025. <a href="publications/TransformerICL.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Low-Dimensional Adaptation of Diffusion Models: Convergence in Total Variation</b> <br />
 J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-dim.pdf">[paper]</a><a href="slides/Diffusion_low_dim_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2025</p>
@@ -354,7 +358,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-27 16:04:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-06 00:00:49 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
