--- a/Workshops.html
+++ b/Workshops.html
@@ -44,7 +44,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-27 16:04:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-06 00:00:49 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
