--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 <h2>2025</h2>
 <ol>
 <li><p><b>Transformers Meet In-Context Learning: A Universal Approximation Theory</b> <br />
-G. Li, Y. Jiao, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025. <a href="publications/TransformerICL.pdf">[paper]</a>
+G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/TransformerICL.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Low-Dimensional Adaptation of Diffusion Models: Convergence in Total Variation</b> <br />
@@ -358,7 +358,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-06 00:00:49 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-06 23:42:50 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
