--- a/Publications_year.html
+++ b/Publications_year.html
@@ -121,7 +121,7 @@ G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-e
 </p>
 </li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
-G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  accepted to <i>SIAM Journal on Optimization</i>, 2025 <a href="publications/OT_game.pdf">[paper]</a>
+G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  <i>SIAM Journal on Optimization</i>, vol. 35, no. 2, pp. 1330-1363, 2025 <a href="publications/OT_game.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Federated Natural Policy Gradient Methods for Multi-task Reinforcement Learning</b> <br />
@@ -358,7 +358,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-07 15:38:59 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-21 15:54:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
