--- a/Group.html
+++ b/Group.html
@@ -110,7 +110,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-07 15:38:59 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-21 15:54:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
