--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -272,7 +272,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-07 15:38:58 JST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-21 15:54:40 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
