--- a/Group.html
+++ b/Group.html
@@ -52,8 +52,6 @@
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Postdoc, co-advised with  Simon Shaolei Du and Jason Lee) </p>
-</li>
 </ul>
 <h2>Alumni </h2>
 <ul>
@@ -102,6 +100,9 @@ Tsinghua University)
 University of California, Santa Barbara) 
 </p>
 </li>
+<li><p><a href="https://zsubfuncz.github.io/zihanzhang.github.io/">Zihan Zhang</a> (Faculty, HKUST)
+</p>
+</li>
 <li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Faculty, 
 
 University of Illinois Urbana-Champaign)
@@ -110,7 +111,7 @@ University of Illinois Urbana-Champaign)
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-21 15:54:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-24 12:56:37 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
