--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://ieeexplore.ieee.org/document/10232863/"> Our paper</a> on MagNet (an ML framework for power magnetics modeling)
  received the <a href="https://www.ieee-pels.org/awards/transactions-on-power-electronics-prize-paper-award/"> IEEE Transactions on Power Electronics Prize Paper Award (first place)</a>. <a href="https://www.princeton.edu/~minjie/magnet.html">(Project webpage by Prof. Minjie Chen's lab)</a>.</li>
 </ul>
-
+<ul>
+    <li><a href="https://zsubfuncz.github.io/zihanzhang.github.io/"> Zihan Zhang</a> will join HKUST 
+ as an Assistant Professor in August 2025. Congrats, Zihan! </li>
+</ul>
 <ul>
     <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> joined UIUC 
  as an Assistant Professor in July 2024. Congrats, Yuchen! </li>
@@ -240,7 +243,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-21 15:54:40 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-24 12:56:37 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
