--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,8 +53,12 @@
 
 <h2>2025</h2>
 <ol>
+<li><p><b>Faster Diffusion Models via Higher-Order Approximation</b> <br />
+G. Li*, Y. Zhou*, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/Diffusion_HighOrder.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>Transformers Meet In-Context Learning: A Universal Approximation Theory</b> <br />
-G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/TransformerICL.pdf">[paper]</a>
+G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, 2025 (*=equal contributions). <a href="publications/TransformerICL.pdf">[paper]</a><a href="slides/Transformer_ICL_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Low-Dimensional Adaptation of Diffusion Models: Convergence in Total Variation</b> <br />
@@ -358,7 +362,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-24 12:58:13 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-03 17:45:55 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
