--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>In-context learning</b>
 </p>
 <ul>
-<li><p>G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/TransformerICL.pdf">&ldquo;Transformers meet in-context learning: A universal approximation theory,&rdquo;</a> 2025 (*=equal contributions). </p>
+<li><p>G. Li*, Y. Jiao*, Y. Huang, Y. Wei, <u>Y. Chen</u>, <a href="publications/TransformerICL.pdf">&ldquo;Transformers meet in-context learning: A universal approximation theory,&rdquo;</a> 2025 (*=equal contributions). <a href="slides/Transformer_ICL_slides.pdf">[slides]</a> </p>
 </li>
 </ul>
 
@@ -240,7 +240,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-24 12:58:13 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-03 17:45:54 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
