--- a/Education.html
+++ b/Education.html
@@ -33,7 +33,14 @@
   gtag('config', 'G-Y92NF7Q0DZ');
 </script>
 <h1>Appointments and Education </h1>
-<h2>University of Pennsylvania (01/2022 &ndash; present)</h2>
+<h2>University of Pennsylvania (07/2025 &ndash; present)</h2>
+<ul>
+<li><p>Professor of Statistics and Data Science</p>
+</li>
+<li><p>Professor of Electrical and Systems Engineering (secondary appointment)</p>
+</li>
+</ul>
+<h2>University of Pennsylvania (01/2022 &ndash; 06/2025)</h2>
 <ul>
 <li><p>Associate Professor of Statistics and Data Science</p>
 </li>
@@ -103,7 +110,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-03 17:45:54 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-07 10:14:39 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Education.jemdoc">source</a>)
 </div>
 </div>
