--- a/Publications_year.html
+++ b/Publications_year.html
@@ -69,8 +69,7 @@ J. Liang, Z. Huang, <u>Y. Chen</u>, 2025. <a href="publications/diffusion-low-di
 <h2>2024</h2>
 <ol>
 <li><p><b>Anytime Acceleration of Gradient Descent</b> <br />
-Z. Zhang,  J. D. Lee, S. S. Du, <u>Y. Chen</u>, 2024. <a href="publications/Anytime_AGD.pdf">[paper]</a>
-<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2025
+Z. Zhang,  J. D. Lee, S. S. Du, <u>Y. Chen</u>, <i>Conference on Learning Theory (COLT)</i>, 2025. <a href="publications/Anytime_AGD.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Denoising Diffusion Probabilistic Models Are Optimally Adaptive to Unknown Low Dimensionality</b> <br />
@@ -362,7 +361,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-03 17:45:55 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-07 10:14:39 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
