--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Statistical learning and optimization</b>
+<li><p><b>Optimization and statistical learning</b>
 </p>
 <ul>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> COLT 2025. 
 </p>
 </li>
-<li><p>Z. Zhang, J. D. Lee, S. S. Du, <u>Y. Chen</u>,  <a href="publications/Anytime_AGD.pdf">&ldquo;Anytime acceleration of gradient descent,&rdquo;</a> 2024 (accepted in part to COLT 2025). </p>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (appeared in part in COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a></p>
 </li>
 </ul>
 
@@ -179,7 +179,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </li>
 </ul>
 <ul>
-<li><p><b>Nonconvex statistical estimation</b>
+<li><p><b>Nonconvex optimization for statistical estimation</b>
 </p>
 <ul>
 <li><p><u>Y. Chen</u>, J. Fan, C. Ma, Y. Yan,  <a href="publications/RPCA_noise.pdf">&ldquo;Bridging convex and nonconvex optimization in robust PCA: Noise, outliers, and missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 49, no. 5, pp. 2948-2971, Oct. 2021. <a href="publications/RPCA_noise.pdf">[ArXiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-49/issue-5/Bridging-convex-and-nonconvex-optimization-in-robust-PCA--Noise/10.1214/21-AOS2066.full">[AoS version]</a>
@@ -240,7 +240,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-07 10:14:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-07 11:21:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
