--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </td></tr></table>
 
 <h2>Openings</h2>
-<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly diffusion models, and LLM),   statistics, and optimization. </p>
+<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly diffusion models, LLM, and RL),   statistics, and optimization. </p>
 <h2>Recent news</h2>
 
 <table class="imgtable"><tr><td>
@@ -243,7 +243,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-13 19:17:34 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-13 09:52:36 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
