--- a/Teaching.html
+++ b/Teaching.html
@@ -87,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-13 19:17:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-13 09:52:37 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Teaching.jemdoc">source</a>)
 </div>
 </div>
