--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <table class="imgtable"><tr><td>
 <img src="images/photo_Dec2019.jpg" alt="alt text" width="200 px" height="IMGLINKTARGET" />&nbsp;</td>
-<td align="left"><p>I am a professor of <a href="https://statistics.wharton.upenn.edu/"> Statistics and Data Science</a> 
+<td align="left"><p>I am a Professor of <a href="https://statistics.wharton.upenn.edu/"> Statistics and Data Science</a> 
 and of <a href="https://www.ese.upenn.edu//"> Electrical and Systems Engineering</a> at 
  University of Pennsylvania. 
 Before moving to UPenn in 2022,   
@@ -243,7 +243,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-13 09:57:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-13 12:04:25 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
