--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
-    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a> from UMich, we present a tutorial in ICML 2025 on diffusion models. Check out the contents and slides <a href="https://icml-2025-tutorial.github.io/diffusion-models/">here</a>. </li>
+    <li>Together with <a href="https://yuejiechi.github.io/">Prof. Yuejie Chi</a> and <a href="https://yutingwei.github.io/">Prof. Yuting Wei</a>, we will present a tutorial on reinforcement learning at the 2025 INFORMS Annual Meetings.  
+    </li>
+</ul>
+<ul>
+    <li>Together with <a href="https://qingqu.engin.umich.edu/">Prof. Qing Qu</a> and <a href="https://liyueshen.engin.umich.edu/">Prof. Liyue Shen</a>, we present a tutorial on diffusion models at ICML 2025. Check out the contents and slides <a href="https://icml-2025-tutorial.github.io/diffusion-models/">here</a>. </li>
 </ul>
 <ul>
     <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
@@ -243,7 +247,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-13 12:04:25 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-13 12:35:31 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
